--- a/src/app/shared/dropdown/dropdown.html
+++ b/src/app/shared/dropdown/dropdown.html
@@ -3,9 +3,9 @@
         <mat-label>Search Here</mat-label>
         <input type="text" placeholder="Search A Recipe" aria-label="Number" matInput [formControl]="myControl"
             [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete">
+        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
             @for (option of filteredOptions | async; track option) {
-            <mat-option [value]="option.title">{{option.title}}</mat-option>
+            <mat-option [value]="option">{{option.title}}</mat-option>
             }
         </mat-autocomplete>
     </mat-form-field>
