Added highlight on hover

--- a/src/app/shared/dropdown/dropdown.scss
+++ b/src/app/shared/dropdown/dropdown.scss
@@ -7,3 +7,9 @@
 .example-full-width {
     width: 100%;
 }
+
+::ng-deep {
+    .mat-mdc-option.mdc-list-item:hover {
+        background-color: lightcyan !important;
+    }
+}
